# Diameter_c11

./: build.sh  buildTags.sh  tags_list
Diameter/: CMakeLists.txt
Diameter/DiameterDictionary/: .cproject  .project  AVP.cpp  AVP.h  CMakeLists.txt  Command.cpp  Command.h  CommandEntry.h  DictionaryDefinition.cpp  DictionaryDefinition.h  GroupedAVP.cpp  GroupedAVP.h  Message.cpp  Message.h
Diameter/DiameterGenerator/: .cproject  .project  Application.cpp  Application.h  Avp.cpp  Avp.h  CMakeLists.txt  Command.cpp  Command.h  Config.cpp  Config.h  DictionaryParser.h  Generator.h  GroupOfAvps.cpp  GroupOfAvps.h  main.cpp
Diameter/DiameterGenerator/impl/: MessageGenerator.cpp  MessageGenerator.h  RapidDictionaryParser.cpp  RapidDictionaryParser.h  TemplateApplicator.cpp  TemplateApplicator.h
Diameter/DiameterGenerator/templates/: DiameterAttr_cpp.tmpl  DiameterAttr_h.tmpl  DiameterEnum_cpp.tmpl  DiameterEnum_h.tmpl  DiameterEvent_h.tmpl  Dictionary_cpp.tmpl  Dictionary_h.tmpl
Diameter/DiameterNet/: ActiveSessions.cpp  ActiveSessions.h  CMakeLists.txt  Endpoint.cpp  Endpoint.h  Session.cpp  Session.h
Diameter/DiameterSerialiser/: .cproject  .project  AVP_s.h  Buffer.cpp  Buffer.h  BufferAttr.h  BufferUtils.cpp  BufferUtils.h  CMakeLists.txt  Converters.cpp  Converters.h  Header_s.h  Serialiser.cpp  Serialiser.h  Utils_s.cpp  Utils_s.h
Diameter/Diameter_Events/: .cproject  .project  CMakeLists.txt  DiaAttrHeader.cpp  DiaAttrHeader.h  DiaAttrTypes.h  DiameterEvent.cpp  DiameterEvent.h  traits.h
Diameter/Modules/: .cproject  .project  FindDiameterSDK.cmake
Diameter/enable_if_test/: .cproject  .project  main.cpp
Diameter/unionTest/: .cproject  .project  main.cpp
DiameterDictionary/: CMakeLists.txt
DiameterDictionary/Base/: BaseDictionary.xml  CMakeLists.txt
DiameterDictionary/Gx970/: .cproject  .project  CMakeLists.txt  Gx970_dictionary.xml
Tests/: CMakeLists.txt
Tests/DeserialiserTest/: .cproject  .project  CMakeLists.txt  DiameterTest.cpp  run.sh
